--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Tipo de amiibo</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="css/custom.css">
@@ -12,43 +12,38 @@
 <body>
     <div class="container">
         <div id="contenido" class="contenido">
-            <h1>Generador de Nombres</h1>
-            <form action="#" id="generar-nombre">
+            <h1>Generador de Amiibos</h1>
+            <form action="#" id="amiibo-form">
                 <div class="row">
                     <div class="six columns">
-                        <label for="origen">Origen del Nombre:</label>
-                        <select class="u-full-width" id="origen">
+                        <label for="type">Tipo de Amiibo:</label>
+                        <select class="u-full-width" id="type">
                             <option value=''>-- Seleccione --</option>
-                            <option value="argentina">Argentina</option>
-                            <option value="brazil">Brasil</option>
-                            <option value="colombia">Colombia</option>
-                            <option value="costa rica">Costa Rica</option>
-                            <option value="france">Francia</option>
-                            <option value="italy">Italia</option>
-                            <option value="mexico">Mexico</option>
-                            <option value="portugal">Portugal</option>
-                            <option value="spain">España</option>
+                            <option value="figure">Figura</option>
+                            <option value="card">Tarjeta</option>
+                            <option value="yarn">Peluche</option>
                         </select>
-                        <label for="genero">Genero:</label>
-                        <select class="u-full-width" id="genero">
+                        <label for="serie">Serie:</label>
+                        <select class="u-full-width" id="serie">
                                 <option value=''>-- Seleccione --</option>
-                                <option value="male">Hombre</option>
-                                <option value="female">Mujer</option>
+                                <option value="Super%20Mario">Super Mario</option>
+                                <option value="Animal%20Crossing">Animal Crossing</option>
+                                <option value="Splatoon">Splatoon</option>
                         </select>
-                        <label>Nombres a Generar</label>
-                        <input type="number" id="numero" class="u-full-width" min="5" max="15" value="5">
+                        <!-- <label for="amount">Amibos a generar</label> -->
+                        <!-- <input type="number" id="amount" class="u-full-width" min="5" max="15" value="5"> -->
                         <input class="button-primary u-full-width" type="submit" value="Generar">
                     </div>
 
                     <div class="six columns">
-                        <div id="resultado"></div>
+                        <div id="results"></div>
                     </div>
                 </div>
-                
+
             </form>
         </div>
     </div>
-    
+
     <script src="js/app.js"></script>
 </body>
 </html>
